<resources>
    <string name="app_name">account</string>
    <string name="auth_email_continue">Continue with Email</string>
    <string name="auth_email_login">LOGIN</string>
    <string name="auth_provider_divider">OR CONTINUE WITH</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_forgot_password">Forgot Password?</string>
    <string name="auth_create_account">Sign up</string>
    <string name="auth_email_empty_error">Please input this field</string>
    <string name="auth_password_empty_error">Please input this field</string>
    <string name="auth_facebook_login" translatable="false">Facebook</string>
    <string name="auth_oauth_failure">Unable to retrieve your information from %1$s, please try again with a different account or provider</string>
    <string name="auth_oauth_canceled">Unable to retrieve your information from %1$s because the operation was canceled</string>
    <string name="auth_google_login" translatable="false">Google</string>
</resources>
