<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity" >

    <ImageView
        android:id="@+id/auth_scrolling_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/auth_background_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightish_red_transparent" />

    <io.jitrapon.glom.base.ui.widget.GlomTextInputLayout
        android:id="@+id/auth_email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:hint="@string/auth_email_hint"
        android:focusableInTouchMode="false"
        android:theme="@style/Widget.Glom.TextInputLayout.White" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </io.jitrapon.glom.base.ui.widget.GlomTextInputLayout>

    <io.jitrapon.glom.base.ui.widget.GlomTextInputLayout
        android:id="@+id/auth_password_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:hint="@string/auth_password_hint"
        android:layout_marginTop="8dp"
        android:focusableInTouchMode="false"
        android:theme="@style/Widget.Glom.TextInputLayout.White" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </io.jitrapon.glom.base.ui.widget.GlomTextInputLayout>

    <TextView
        style="@style/TextAppearance.H5"
        android:id="@+id/auth_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/auth_password_input_layout"
        android:textColor="@color/white" />

    <io.jitrapon.glom.base.ui.widget.GlomButton
        style="@style/Widget.Glom.Button.Raised.Colored"
        android:theme="@style/Theme.Glom.Button.Raised.White.Round"
        android:background="@drawable/rounded_corner_background_transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/auth_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/auth_provider_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/auth_continue_with_email"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="18dp" />

    <io.jitrapon.glom.base.ui.widget.GlomButton
        style="@style/Widget.Glom.Button.Raised.Colored"
        android:theme="@style/Theme.Glom.Button.Raised.White.Round"
        android:background="@drawable/rounded_corner_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/auth_continue_with_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_email_login"
        app:layout_constraintStart_toEndOf="@+id/auth_create_account"
        app:layout_constraintBottom_toTopOf="@+id/auth_provider_divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="18dp" />

    <io.jitrapon.glom.base.ui.widget.TitledLineSeperator
        android:id="@+id/auth_provider_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/auth_facebook_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp"
        app:title="@string/auth_provider_divider"
        app:titleColor="@color/white"
        app:lineColor="@color/white" />

    <io.jitrapon.glom.base.ui.widget.GlomButton
        style="@style/Widget.Glom.Button.Raised.Colored"
        android:theme="@style/Theme.Glom.Button.Raised.White.Round"
        android:background="@drawable/rounded_corner_background"
        android:backgroundTint="@color/com_facebook_blue"
        android:id="@+id/auth_facebook_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/auth_line_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/auth_google_button"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp" />

    <io.jitrapon.glom.base.ui.widget.GlomButton
        style="@style/Widget.Glom.Button.Raised.Colored"
        android:theme="@style/Theme.Glom.Button.Raised.White.Round"
        android:background="@drawable/rounded_corner_background"
        android:id="@+id/auth_google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/auth_line_button"
        app:layout_constraintStart_toEndOf="@+id/auth_facebook_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp" />

    <io.jitrapon.glom.base.ui.widget.GlomButton
        style="@style/Widget.Glom.Button.Raised.Colored"
        android:theme="@style/Theme.Glom.Button.Raised.White.Round"
        android:background="@drawable/rounded_corner_background"
        android:backgroundTint="@color/spring_green"
        android:id="@+id/auth_line_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
